<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="35dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/calculadora" />

        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/editNumeroUno"
            android:hint="@string/numero_uno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            tools:ignore="Autofill" />

        <EditText
            android:layout_marginTop="25dp"
            android:id="@+id/editNumeroDos"
            android:hint="@string/numero_dos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_weight="1"
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_weight="1"
                android:id="@+id/btnLimpiar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/limpiar"
                tools:ignore="ButtonStyle" />

        </LinearLayout>



        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/txtResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:gravity="center_horizontal"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>